# RINS-kappa

./: .gitignore  README.md  bird_classification.ipynb  ring_detection.ipynb
bird_catalogue/: bird_catalogue.ipynb
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_messages/share/custom_messages/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dis_tutorial1/lib/dis_tutorial1/: complete_node  py_complete_node.py  py_draw_square.py  py_simple_client_node.py  py_simple_publisher.py  py_simple_server_node.py  py_simple_subscriber.py  simple_client_node  simple_publisher  simple_server_node  simple_set_bool_server_node  simple_subscriber
install/dis_tutorial1/share/dis_tutorial1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dis_tutorial2/lib/dis_tutorial2/: go_to_position  random_velocity_publisher
install/dis_tutorial2/share/dis_tutorial2/: package.ps1  package.sh  package.xml  package.zsh
install/dis_tutorial3/lib/dis_tutorial3/: detect_people.py  robot_commander.py  save_faces.py
install/dis_tutorial3/share/dis_tutorial3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build
speech/: press_test.py  speech.ipynb  speech.py  whisper_test.py
workspace/: frames_2025-05-29_12.42.20.gv  frames_2025-05-29_12.42.54.gv  inflation_override.yaml
workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace/log/: latest_build
workspace/notebooks/: bridge.ipynb
workspace/src/custom_messages/: CMakeLists.txt
workspace/src/dis_tutorial1/: CMakeLists.txt  setup.py
workspace/src/dis_tutorial2/: CMakeLists.txt  README.md
workspace/src/dis_tutorial2/workspace/install/: setup.bash  setup.zsh
workspace/src/dis_tutorial2/workspace/install/dis_tutorial2/lib/dis_tutorial2/: intersection
workspace/src/dis_tutorial2/workspace/src/dis_tutorial1/: setup.cfg
workspace/src/dis_tutorial2/workspace/src/dis_tutorial2/: setup.py
workspace/src/dis_tutorial3/: CMakeLists.txt  README.md
workspace/src/dis_tutorial3_edited/: CMakeLists.txt
workspace/src/dis_tutorial5/: CMakeLists.txt
workspace/src/task_1r/: CMakeLists.txt
workspace/src/task_2s/: CMakeLists.txt  package.xml
workspace/src/task_2s/data/: bridge_start.npy  east_west_division.txt  obhod.npy  obhod24.npy  obhod42.npy  relevant_species.txt  rviz_setup.rviz
workspace/src/task_2s/launch/: rviz_gazebo.launch.py  task_2s_launch.py
workspace/src/task_2s/maps/: bird_map.pgm  t1r_map.yaml
workspace/src/task_2s/models/: label_encoder.pkl
workspace/src/task_2s/msg/: Bird.msg
workspace/src/task_2s/scripts/: bird_catalogue_server.py  bird_classification.ipynb  bird_client_example.py  bird_descriptions.py  bridge_follower.py  detect_birds.py  detect_people.py  detect_people3.py  detect_rings_final.py  robot_commander.py  save_birds.py  save_faces.py  save_rings.py  speech_client_example.py  speech_server.py  test.py
workspace/src/task_2s/srv/: BirdCollection.srv  GetGenderService.srv  GetImage.srv  GoBridgeFollower.srv  MarkerArrayService.srv  SpeechService.srv
(+6349 files in other folders)
